new blog, new font, and mnor style edits to about page

--- a/config/blogs.yml
+++ b/config/blogs.yml
@@ -17,3 +17,6 @@
 - url: my-new-website
   title: welcome to my new website
   date: April 29 2012
+- url: a-new-chapter
+  title: a new chapter
+  date: July 15 2012
