--- a/config/blogs.yml
+++ b/config/blogs.yml
@@ -20,3 +20,6 @@
 - url: a-new-chapter
   title: a new chapter
   date: July 15 2012
+- url: how-to-not-be-an-awesome-landlord
+  title: how to not be an awesome landlord
+  date: August 31 2012
