new blog, coffeescript, updated portfolio

--- a/config/blogs.yml
+++ b/config/blogs.yml
@@ -23,3 +23,6 @@
 - url: how-to-not-be-an-awesome-landlord
   title: how to not be an awesome landlord
   date: August 31 2012
+- url: valentines
+  title: Ian's Secret Skills
+  date: February 14 2012
